<resources>
    <string name="app_name">RePack</string>
    <string name="logo_of_the_app">Logo of the app</string>
    <string name="logotipo">RePack</string>
    <string name="sign_in">Sign In</string>
    <string name="email_username"><u>Email</u></string>
    <string name="password"><u>Password</u></string>
    <string name="email"><u>Email</u></string>
    <string name="user"><u>Nome Utilizador</u></string>
    <string name="passconf"><u>Reintroduza a Password</u></string>
    <string name="menu">Menu</string>
    <string name="nome"><u>Nome</u></string>
    <string name="descricao"><u>Descrição</u></string>
    <string name="fotografia"><u>Fotografia</u></string>
    <string name="items_perto"><u>Items Perto</u></string>


    <string name="Repack">dropDownMenuExample</string>
    <string-array name="kms">
        <item>5 Km</item>
        <item>10 Km</item>
        <item>15 Km</item>
        <item>25 Km</item>
        <item>50 Km</item>
        <item>100 Km</item>
    </string-array>

</resources>