<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="278dp"
        android:layout_height="259dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="164dp"
        android:contentDescription="@string/logo_of_the_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_splash"
        android:layout_width="367dp"
        android:layout_height="68dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/round_btn"
        android:editable="false"
        android:fontFamily="@font/ibm_plex_mono_light"
        android:onClick="MudarLayoutSignIn"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#C6C6C6"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_texto"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registar_splash"
        android:layout_width="367dp"
        android:layout_height="68dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/round_btn"
        android:editable="false"
        android:fontFamily="@font/ibm_plex_mono_light"
        android:onClick="MudarLayoutRegistar"
        android:text="Registar Conta"
        android:textAllCaps="false"
        android:textColor="#C6C6C6"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_texto" />

    <TextView
        android:id="@+id/logo_texto"
        android:layout_width="288dp"
        android:layout_height="67dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="168dp"
        android:background="@null"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="@font/ibm_plex_mono_medium"
        android:inputType="textPersonName"
        android:text="@string/logotipo"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>